--- a/Index.html
+++ b/Index.html
@@ -374,7 +374,7 @@
 // SUPABASE — clés injectées par Vercel au build
 // Dans Vercel > Settings > Environment Variables :
 //   SUPABASE_URL = https://gixwqwbvcnfyllusdlkl.supabase.co
-//   SUPABASE_KEY = ta_nouvelle_anon_key (après reset)
+//   SUPABASE_KEY = sb_publishable__TqUoZNP8rXpTMp_u6_zUA_SrltqZCI
 // ═══════════════════════════════════════════════════════════
 const SUPABASE_URL = '%%SUPABASE_URL%%';
 const SUPABASE_KEY = '%%SUPABASE_KEY%%';
